[package]
name = "esvr"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
mime_guess = "2.0.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.51.0", features = ["full"] }
tokio-util = "0.7.18"
tower-http = { version = "0.6.8", features = ["fs"] }
